fixed page-section contents overflowing

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,9 +1,7 @@
 .page-section {
   position: relative;
-  padding: 1.2rem 0;
-  @mixin atMedium {
-    padding: 6rem 0;
-  }
+  padding: 6rem 0;
+  overflow: hidden;
 
   &--blue {
     color: #fff;
